# Parallel-Geometric-Multigrid-for-Poisson-problem

./: CMakeLists.txt  DynamicGridUtils.hpp  README.md  RUNNING_COMMAND.txt  Smoother.hpp  globals.cpp  globals.hpp  save_vector_err_file.hpp
1_part_Smoother_Comparison/: SolverRunner.hpp  main  main.cpp  save_to_file.hpp
1_part_Smoother_Comparison/python_plot/: err_vector_iteration.py  plot_err_result.py  plot_h_error_convercency.py  plot_res_result.py  plot_time_output.py
1°_part_Iterative_Solver/: conjugate_gradient.hpp  gauss_seidel.hpp  globals.cpp  globals.hpp  head.hpp  jacobian.hpp  main  main.cpp  main.hpp  plot_err_convergence.py  plot_err_vector_jacobi_iteration.py  plot_errors_it_all.py  plot_errors_it_cg.py  plot_errors_it_gs.py  plot_errors_it_j.py  plot_errors_it_steepest.py  plot_h_err_jacobi.py  plot_h_error_convergence.py  plot_res_result.py  save_file.hpp  steepest_descent.hpp
2_part_MG/: MultiGrid.hpp  MultiGridTestRunner.hpp  main  main.cpp  save_to_file.hpp
2_part_MG/python_plot/: plot_time_output.py  (+3 more)
2°_part_MG/: cg.hpp  globals.cpp  globals.hpp  jacobian.hpp  main  main.cpp  main.hpp  operator  operator.hpp  plot_solution_x.py  plot_time_output.py  solution.txt  test.operator.cpp
3_part_parallel/: ParallelTestRunner.cu  Parallel_Method.cu  Parallel_Mg.cu  main  main.cu  save_to_file.hpp
3°_part_Parallel_MG/: convolution.cu  cpu_mg.hpp  globals.cpp  jacobi.cu  jacobi_cuda  main.cu  main.hpp  main_cuda  mg  mg.cu  prolungator.cu  prolungator_cuda  residual.cu  restriction.cu  restriction_cuda
MG/: globals.cpp  main  main.hpp  operator.cpp
(+46 files in other folders)
